Fix issue with imagies not showing in review, add  names of the locations underneath the photos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,12 @@ padding: 0 10px;
     padding: 10px 10px 10px 20px;
 }
 
+/* Gallery */
+
+.photo-item img {
+    width: 100%;
+}
+
 /*Footer */
 footer {
     background-color: #009A44;
